--- a/help/date_api.help.ini
+++ b/help/date_api.help.ini
@@ -12,12 +12,33 @@ title = New Features
 parent = overview
 weight = -10
 
+[date]
+title = CCK Date field
+parent = overview
+weight = -9
+
+[date-types]
+title = Date field and widget types
+parent = date
+weight = -10
+
+[date-display]
+title = Date formatter display
+parent = date
+weight = 1
+
 [date-copy]
 title = Date Copy
 parent = overview
 weight = 1
 
+[date-views]
+title = Views Integration
+parent = overview
+weight = -5
+
 [date-argument]
 title = Generic date argument
-parent = overview
+parent = date-views
 weight = 2
+
