Update Advanced help files and move the fields and widgets description into the CCK fields page, as has been done with the other CCK field modules.

--- a/help/date_api.help.ini
+++ b/help/date_api.help.ini
@@ -13,13 +13,12 @@ parent = overview
 weight = -10
 
 [date]
-title = CCK Date field
+title = Date field
 parent = overview
-weight = -9
 
 [date-types]
-title = Date field and widget types
-parent = date
+title = Date field
+parent = content%fields
 weight = -10
 
 [date-display]
