More updates for Advanced help.

--- a/help/date_api.help.ini
+++ b/help/date_api.help.ini
@@ -41,3 +41,8 @@ title = Generic date argument
 parent = date-views
 weight = 2
 
+[date-filter]
+title = Generic date filter
+parent = date-views
+weight = 3
+
