Add a date_embed_view() function to provide a way to embed views and have their navigation move either together or separately, and document it in Advanced help.

--- a/help/date_api.help.ini
+++ b/help/date_api.help.ini
@@ -46,3 +46,7 @@ title = Generic date filter
 parent = date-views
 weight = 3
 
+[embedding]
+title = Embedding Views
+parent = date-views
+weight = 4
