Remove ical import from Date Copy and add instructions on how to do it using Feed API to Advanced help.

--- a/help/date_api.help.ini
+++ b/help/date_api.help.ini
@@ -31,6 +31,11 @@ title = Date Copy
 parent = overview
 weight = 1
 
+[ical-import]
+title = iCal Import
+parent = date-copy
+weight = 1
+
 [date-views]
 title = Views Integration
 parent = overview
