Move Date repeat form help to Advanced Help instead of using collapsed fieldset.

--- a/help/date_api.help.ini
+++ b/help/date_api.help.ini
@@ -55,3 +55,7 @@ weight = 3
 title = Embedding Views
 parent = date-views
 weight = 4
+
+[date-repeat-form]
+title = Repeating date options
+parent = date
