--- a/help/date_api.help.ini
+++ b/help/date_api.help.ini
@@ -7,6 +7,11 @@ index name = "Date API"
 [overview]
 title = Overview
 
+[date-api]
+title = Date API
+parent = overview
+weight = 20
+
 [new-features]
 title = New Features
 parent = overview
@@ -15,6 +20,11 @@ weight = -10
 [date]
 title = Date field
 parent = overview
+
+[date-php4]
+title = Date PHP4
+parent = overview
+weight = 2
 
 [date-types]
 title = Date field
@@ -59,3 +69,28 @@ weight = 4
 [date-repeat-form]
 title = Repeating date options
 parent = date
+
+[date-create]
+title = The PHP DateTime Object
+parent = date-api
+weight = 1
+
+[date-api-functions]
+title = Date API Functions
+parent = date-api
+weight = 3
+
+[form-elements]
+title = Form Elements
+parent = date-api
+weight = 4
+
+[date-timezones]
+title = Timezone Handling
+parent = date-api
+weight = 5
+
+[ical-parser]
+title = iCal Parser
+parent = date-api
+weight = 6
