--- a/help/date_api.help.ini
+++ b/help/date_api.help.ini
@@ -94,3 +94,8 @@ weight = 5
 title = iCal Parser
 parent = date-api
 weight = 6
+
+[date-views-dates]
+title = Views Date Handling
+parent = date-api
+weight = 7
